﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2006-04-25 Michal Čihař  <michal@cihar.com>
    * libraries/common.lib.php: Make cookie login form work with token
      protection.
    * libraries/auth/cookie.auth.lib.php: Do not include empty values.

2006-04-25 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * db_details_qbe.php, db_printview.php, libraries/display_tbl.lib.php,
      css/phpmyadmin.css.php, js/functions.js, pdf_pages.php:
      style upgrade

2006-04-24 Michal Čihař  <michal@cihar.com>
    * main.php: Fix logout link (bug #1474694).

2006-04-21 Michal Čihař  <michal@cihar.com>
    * libraries/import/csv.php: Fix importing files without trailing new line
      (bug #1473944).
    * Documentation.html: Document problems with PMA_blowfish on clusters of
      different architectures (bug #1470912).
    * Documentation.html: Document LoginCookieValidity (bug #1473357).

2006-04-20 Michal Čihař  <michal@cihar.com>
    * index.php: Check target against goto_whitelist.
    * libraries/url_generating.lib.php, libraries/session.inc.php,
      libraries/common.lib.php: Protect against external links which could
      perform any action (CVE-2006-1804).
    * changelog.php: Link to CAN/CVE security issues, highlight releases, fix
      email links, link releases to tags in CVS.

2006-04-13 Marc Delisle  <lem9@users.sourceforge.net>
    * server_databases.php: need brackets for correct calculation of page

2006-04-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * server_databases.php, libraries/database_interface.lib.php:
      disable table stats for MySQL 5 by default
    * server_databases.php:
      use new functionality of PMA_DBI_get_databases_full() to limit display
    * libraries/database_interface.lib.php:
       - extended PMA_DBI_get_databases_full() to allow limiting and sorting
       - added new function PMA_DBI_get_databases_count()
    * libraries/config.default.php: